--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <div class="container">
         <h2>Hello everyone</h2>
+        <p>this is from child1</p>
     </div>
 </body>
 </html>
