--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="container">
+<div class="container">
    <div class="navigation">
     <ul>
         <li>
@@ -89,6 +89,14 @@
             </li>
         </ul>
     </div>
+   </div>
+
+   <div class="text-on-image">
+    <img src="./images/im5.jpg" alt="">
+      <div class="text">
+        <h2>Vidhana Soudha</h2>
+        <p>This is paragraph</p>
+      </div>
    </div>
 </div>
 </body>
